<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    app:cardBackgroundColor="@color/gray_one"
    app:cardCornerRadius="8dp">

    <ImageView
        android:id="@+id/imgFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favourite_fill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/textLookingNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/regular"
            android:text="@string/tv_looking_now_label"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textVacancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/medium"
            android:text="@string/tv_vacancy_label"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/semibold"
            android:text="@string/tv_salary_label"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/tv_city_label"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/regular"
                android:text="@string/tv_company_label"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/ic_done" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_travel" />

            <TextView
                android:id="@+id/textExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_experience_label"
                android:fontFamily="@font/regular"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="21dp"
            android:fontFamily="@font/regular"
            android:text="@string/tv_date_label"
            android:textColor="@color/gray_light"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/background_button_green"
            android:text="@string/button_accept_label"
            android:fontFamily="@font/regular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
